add_executable(
  SonarSweep
  SonarSweep.cpp
  )

add_executable(
  Dive
  Dive.cpp
  )

add_executable(
  BinaryDiagnostics
  BinaryDiagnostics.cpp
  )

add_executable(
  GiantSquid
  GiantSquid.cpp
  )

add_executable(
  HydrothermalVenture
  HydrothermalVenture.cpp
  )

add_executable(
  Lanternfish
  Lanternfish.cpp
  )

add_executable(
  PassagePathing
  PassagePathing.cpp
  )
